[gd_scene format=3 uid="uid://hwwble31n3j5"]

[ext_resource type="Script" uid="uid://b11pcibjx50pn" path="res://GUI/main_menu.gd" id="1_06t4h"]
[ext_resource type="PackedScene" uid="uid://vu04671xunx7" path="res://attachments/fast_ranged_attachment.tscn" id="2_rhcmj"]
[ext_resource type="PackedScene" uid="uid://ceuf45tbqi1rd" path="res://attachments/med_ranged_attachment.tscn" id="3_exjve"]
[ext_resource type="PackedScene" uid="uid://bsxw3rsifs8f2" path="res://attachments/big_melee_attachment.tscn" id="4_s7n8e"]
[ext_resource type="PackedScene" uid="uid://debxgxhqpgpf1" path="res://attachments/melee_attachment.tscn" id="5_w0c01"]
[ext_resource type="PackedScene" uid="uid://cf2tch766jqhv" path="res://attachments/shield_attachment.tscn" id="6_w0c01"]
[ext_resource type="PackedScene" uid="uid://cq1l8wjowc4tk" path="res://GUI/Splash screen manager bootup/splash_screen_manager.tscn" id="7_ibxkv"]
[ext_resource type="Texture2D" uid="uid://cf67axfv1yykl" path="res://GUI/Splash screen pngs/logo_large_color_dark.png" id="8_bfvk1"]

[node name="Main Menu" type="Node2D" unique_id=1178264397]
script = ExtResource("1_06t4h")
attachment_1 = ExtResource("2_rhcmj")
attachment_2 = ExtResource("3_exjve")
attachment_3 = ExtResource("4_s7n8e")
attachment_4 = ExtResource("5_w0c01")
attachment_5 = ExtResource("6_w0c01")

[node name="Left arm weapon" type="OptionButton" parent="." unique_id=1657294550]
offset_left = 133.0
offset_top = 136.0
offset_right = 411.0
offset_bottom = 241.0
button_pressed = true
keep_pressed_outside = true
selected = 0
item_count = 6
popup/item_0/text = "ARM YOURSELF"
popup/item_0/id = 0
popup/item_0/disabled = true
popup/item_1/text = "Small Fast bullet"
popup/item_1/id = 1
popup/item_2/text = "Bigger Slower bullets"
popup/item_2/id = 2
popup/item_3/text = "Big Sword"
popup/item_3/id = 3
popup/item_4/text = "Stick"
popup/item_4/id = 4
popup/item_5/text = "Shield"
popup/item_5/id = 5

[node name="Right arm weapon" type="OptionButton" parent="." unique_id=1676839548]
offset_left = 772.0
offset_top = 142.0
offset_right = 1050.0
offset_bottom = 243.0
button_pressed = true
keep_pressed_outside = true
selected = 0
item_count = 6
popup/item_0/text = "ARM YOURSELF"
popup/item_0/id = 0
popup/item_0/disabled = true
popup/item_1/text = "Small Fast bullet"
popup/item_1/id = 1
popup/item_2/text = "Bigger Slower bullets"
popup/item_2/id = 2
popup/item_3/text = "Big Sword"
popup/item_3/id = 3
popup/item_4/text = "Stick"
popup/item_4/id = 4
popup/item_5/text = "Shield"
popup/item_5/id = 5

[node name="Fight" type="Button" parent="." unique_id=520077590]
offset_left = 479.0
offset_top = 144.0
offset_right = 701.0
offset_bottom = 247.0
text = "Enter the Arena!"

[node name="Options" type="Button" parent="." unique_id=2111244822]
offset_left = 480.0
offset_top = 311.0
offset_right = 702.0
offset_bottom = 377.0
text = "Options"

[node name="Exit" type="Button" parent="." unique_id=131406347]
offset_left = 480.0
offset_top = 401.0
offset_right = 702.0
offset_bottom = 467.0
text = "Exit"

[node name="SensitivitySlider" type="HSlider" parent="." unique_id=1881222378]
offset_left = 408.0
offset_top = 49.0
offset_right = 775.0
offset_bottom = 147.0
min_value = 0.1
max_value = 4.0
step = 0.1
value = 1.0
tick_count = 40
ticks_position = 3

[node name="SensitivityLabel" type="Label" parent="." unique_id=544741893]
offset_left = 505.0
offset_top = 68.0
offset_right = 680.0
offset_bottom = 91.0
text = "Camera Sensitivity: 1.0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Splash Screen Manager" parent="." unique_id=147657186 instance=ExtResource("7_ibxkv")]

[node name="ColorRect2" type="ColorRect" parent="Splash Screen Manager" unique_id=2064732514]
layout_mode = 0
offset_right = 1146.0
offset_bottom = 644.0
color = Color(0, 0, 0, 1)

[node name="CenterContainer" type="CenterContainer" parent="Splash Screen Manager/ColorRect2" unique_id=214962874]
layout_mode = 1
anchors_preset = -1
anchor_left = 13.874001
anchor_top = 7.59
anchor_right = 13.874001
anchor_bottom = 7.59
offset_left = -379.96002
offset_top = -153.6
offset_right = 2153.04
offset_bottom = 870.4
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.3, 0.3)

[node name="TextureRect" type="TextureRect" parent="Splash Screen Manager/ColorRect2/CenterContainer" unique_id=1188854132]
layout_mode = 2
texture = ExtResource("8_bfvk1")

[connection signal="pressed" from="Fight" to="." method="_on_fight_pressed"]
[connection signal="pressed" from="Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
[connection signal="value_changed" from="SensitivitySlider" to="." method="_on_sensitivity_slider_value_changed"]
